--- a/TODO
+++ b/TODO
@@ -5,7 +5,8 @@ Todo:
   ✔ Include Font Awesome @done(21-07-07 02:43)
   ✔ Setup the base template @done(21-07-07 02:43)
   ✔ Create django app and models for products @done(21-07-07 02:46)
-  ✔ Create simple front page (lates products) @done(21-07-07 03:20)
+  ✔ Create Serializers and views models for products @done(21-07-07 03:22)
+  ✔ Create simple front page (lates products) @done(21-07-09 13:06)
   ☐ View a product - create viewset in Django
                     - Create vue page for showing products
                     - Add link to detail
